# cppfront

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  test-all.ps1  test-all.sh
.github/: dependabot.yml
.github/scripts/: install_cxx_modules.ps1
.github/workflows/: ci.yml
cmake/: CppfrontHelpers.cmake  cppfront-config.cmake.in
example/: CMakeLists.txt
example/app/: CMakeLists.txt
regression-tests/: CMakeLists.txt  CppfrontDeveloper.cmake  Cxx23Tests.cmake
regression-tests/cmake/: CMakeLists.txt.in  ExecuteTestCase.cmake.in  ExecuteWithRedirection.cmake  FindBuildResultFile.cmake.in  UpdateBuildOutput.cmake.in  UpdateTestResults.cmake.in  test-case-config.cmake.in
